--- a/main.html
+++ b/main.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Student Details</title>
+  <style>
+    table {
+      width: 100%;
+      background-color: yellow;
+      border: 1px solid black;
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid black;
+      padding: 8px;
+      text-align: center;
+    }
+    caption {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <table>
+    <caption>Student Details</caption>
+    <thead>
+      <tr>
+        <th>NAME</th>
+        <th>AGE</th>
+        <th>BRANCH</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John Doe</td>
+        <td>20</td>
+        <td>Computer Science</td>
+      </tr>
+      <tr>
+        <td>Jane Smith</td>
+        <td>22</td>
+        <td>Mechanical Engineering</td>
+      </tr>
+      <tr>
+        <td>Michael Johnson</td>
+        <td>21</td>
+        <td>Civil Engineering</td>
+      </tr>
+    </tbody>
+  </table>
 
 </body>
-
 </html>
